--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
-    "nodemailer": "^6.9.8"
+    "resend": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/nodemailer": "^6.4.14",
     "typescript": "^5"
   }
 }
