--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
-    "resend": "^2.1.0"
+    "@sendgrid/mail": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
